7044892: JSR 292: API entry points sometimes throw the wrong exceptions or doesn't throw the expected one

Fix to 7042656: JSR292: invokeExact/Generic doesn't throw UnsupportedOperationException if invoked via Method.invoke

Reviewed-by: never